# tsn-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONCEPTS.md  README.md  RELEASING.md  TODOS.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  production-build.yml
docs/: 2026-06-02-architecture-review.html  diagnostics-log-contract.md  mcp-services-overview.html  staged-agent-workflow.md  testing.md  topology-mcp-implementation-report.html  topology-mcp.md
docs/brainstorms/: 2026-05-20-tsn-agent-tauri-ned-requirements.md  2026-05-27-tsn-topology-mcp-architecture.html  2026-05-27-tsn-topology-mcp-requirements.md  2026-06-03-session-db-mcp-requirements.md  2026-06-09-dual-plane-topology-generation-requirements.md  2026-06-09-editable-skill-guidance-source-requirements.md  2026-06-09-tool-call-display-requirements.md  2026-06-10-topology-canvas-spec-alignment-requirements.md  2026-06-11-topology-canvas-interaction-requirements.md  2026-06-16-llm-stage-switch-intent-requirements.md  2026-06-17-topology-stage-verification-requirements.md  2026-06-23-single-step-undo-requirements.md  2026-06-25-inet-timesync-soft-sim-requirements.md  2026-06-26-sim-interface-contract-tests-requirements.md  2026-06-26-timesync-panel-subtabs-reveal-requirements.md  2026-07-01-flow-tas-qbv-inet-verification-requirements.md  2026-07-03-flow-three-class-st-rc-be-requirements.md  2026-07-09-onboarding-landing-project-templates-requirements.md  2026-07-13-flow-panel-redesign-requirements.md  2026-07-14-inet-gcl-window-table-display-requirements.md  2026-07-15-flow-gcl-single-table-requirements.md  2026-07-15-gcl-leftovers-batch-requirements.md  2026-07-15-ktd13-forward-only-forwarding-requirements.md  2026-07-16-flow-softsim-warmup-exclusion-requirements.md
docs/deliverables/: 2026-07-15-castup-gcl-format-v1.html  2026-07-15-castup-gcl-format-v1.md
docs/ideation/: 2026-06-09-aerospace-topology-support-ideation.md  (+13 more)
scripts/: check-no-legacy-types.sh  prepare-release.mjs  verify-skills.mjs
src-node/: claude-agent-worker.mjs  claude-agent-worker.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_e2e.rs  commands.rs  db.rs  diagnostic_store.rs  eval_command.rs  flow_plan_command.rs  flow_query_command.rs  flow_reconcile.rs  flow_route.rs  flow_sidecar_routes.rs  flow_verify.rs  flow_verify_command.rs  flow_verify_fault.rs  flow_verify_types.rs  flow_verify_verdict.rs  gcl_raw_store.rs  gcl_synth.rs  hardware_api.rs  inet_bundle.rs  inet_remote.rs  inet_sim_bundle.rs  inet_sim_command.rs  inet_sim_http.rs  inet_sim_http_config.rs  inet_verify_command.rs  lib.rs  log_file_writer.rs  redaction.rs  session_export.rs  session_import.rs  session_store.rs  skill_factory_hashes.rs  skill_files.rs  template_store.rs  timesync_query_command.rs  timesync_sidecar_routes.rs  timesync_tree.rs  timesync_verify.rs  topology_backfill.rs  topology_compute.rs  (+11 more)
src/app/: App.css  (+6 more)
(+210 files in other folders)
