[package]
name = "tsn-agent"
version = "0.10.0"
description = "HIBridge Agent desktop application"
authors = ["HIBridge Agent contributors"]
edition = "2024"

[lib]
name = "tsn_agent"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net", "macros", "io-util", "time"] }
# Plan v3 U3: axum sidecar + per-launch Bearer token。boss 已批准 axum/tower-http/tokio features 扩展。
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
base64 = "0.22"
subtle = "2"
# 审计 P1#3：worker 超时需 kill(-pgid) 端掉 SDK 拉起的孤儿 MCP child（已在 lockfile，传递依赖）。
libc = "0.2"
# R1 播种三态：出厂文件内容哈希（已在 lockfile 0.10.9，tauri 链传递依赖，无新构建图条目）。
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net", "macros", "time", "test-util"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
tauri = { version = "2", features = ["test"] }
